scss/custom-styles/_cards.scss
/* ... */
.profile .accordion-item {
  &.is-active {
    @include breakpoint(medium only) {
      .margin-top-1[data-visible-on="display"] {
        margin-top: 0 !important;
      }
    }
  }

  .user-email {
    margin-top: 0 !important;
  }
}

.avatar-container {
  z-index: 20;
  width: $user-card-default-size;
  min-width: $user-card-default-size;

  @each $user-card-size, $size in $user-card-sizes {
    &.#{$user-card-size} {
      width: $size;
      min-width: $size;
    }
  }

  img[data-toggle],
  img[role="button"] {
    cursor: pointer;
    transition: $global-transition-short;
  }

  img[data-move] {
    cursor: move;
    transition: $global-transition-short;
  }

  &:hover img[data-toggle],
  &:hover img[data-move],
  &:hover img[role="button"],
  img[role="button"].open,
  [aria-expanded="true"] {
    border-radius: $global-radius;
    transform: scale(0.8);
  }

  &:focus-visible img[data-toggle],
  &:focus-visible img[data-move],
  &:focus-visible img[role="button"] {
    border-radius: $global-radius;
    transform: scale(0.9);
  }

  @each $size-label, $size in $user-card-sizes {
    .#{$size-label} & {
      width: $size;
      min-width: $size;
    }
  }
}

.user-name {
  font-size: 0.875rem;
  margin: 0;
  display: inline-block;

  .fa {
    margin-left: 1em;
    color: $color-text-2;
  }

  .small & {
    height: 1.125rem;

    &:last-child {
      height: initial;
    }
  }

  .large & {
    font-size: 1rem;
  }

  .xlarge & {
    font-size: 1.5rem;
  }

  .xxlarge & {
    font-size: 1.5rem;
  }
}

.avatar {
  flex: 0 0 auto;
  width: $user-card-default-size;

  img {
    border-radius: $global-radius;
  }

  @each $user-card-size, $size in $user-card-sizes {
    &.#{$user-card-size},
    .avatar.#{$user-card-size} & {
      width: $size;
      height: $size;
    }
  }
}

.avatar-array {
  position: relative;
  width: 48px;
  display: flex;
  justify-content: center;
  align-items: center;

  .avatar-item {
    position: relative;
    flex: 1 1 auto;
    min-width: 28px;

    & + .avatar-item {
      margin-left: -25%;
    }

    @for $i from 1 through 5 {
      &:nth-child(#{$i}) {
        z-index: 5 - $i;
      }
    }
  }

  img {
    width: 28px;
    height: 28px;
    box-shadow: 0 0 0 1px $color-bg-2;
    margin: 0 auto;
    border-radius: 50%;
  }
}

// 7. Post Card
// ---------

.page-card,
.post-card {
  @include header-list;
}

.post-card,
.activity-card {
  a:first-child .post-feature-image,
  .post-feature-image:first-child,
  .space-header:first-child {
    overflow: hidden;
    border-radius: $card-border-radius $card-border-radius 0 0;
  }

  &.activity-card-new {
    box-shadow: inset 3px 0 0 var(--f-color-brand, $primary-color);
  }

  & .avatar-container > .clipped {
    border-radius: var(--f-radius);
    overflow: hidden;
  }

  &:not(.activity-card) > .card-section:first-child > .avatar-container > .clipped {
    border-radius: $card-border-radius 0 0 0;
  }

  .comment-avatar-list {
    --avatar-overlap: 0.6rem;

    flex-flow: row-reverse wrap;
    justify-content: flex-end;
    height: map-get($user-card-sizes, small);
    min-width: map-get($user-card-sizes, small);
    max-width: 40%;
    overflow: hidden;
    border-radius: 0 0 0 $card-border-radius;
    padding-left: calc(var(--avatar-overlap) + #{map-get($spacing-scale, 1)});
    margin-right: calc(-0.7 * var(--avatar-overlap));

    .avatar-container {
      border-radius: 50%;
      overflow: hidden;
      border: 3px solid $color-bg-1;
      box-sizing: border-box;
      margin-left: calc(-1 * var(--avatar-overlap));
    }
  }

  .user:not(:first-child) {
    border-top: $hr-border;
  }

  .dropdown-pane {
    width: 150px;
  }

  .activity-blog {
    text-decoration-color: color-mix-opacity(#{$color-text-0}, 70%, 30%) !important;
  }

  .activity-description {
    line-height: 1.4;
    word-break: break-word;
    overflow-wrap: break-word;
  }
}

.post-card-footer,
.activity-card-footer {
  box-sizing: content-box;
}

.main-menu {
  .activity-card {
    min-width: calc(min(350px, 90vw));

    a.card-section {
      z-index: 100;
      width: 100%;
    }
  }
}

.dot-list {
  & > *:not(:last-child)::after {
    content: "\00b7";
    margin: 0 0.5em;
  }
}

.dot-list-dot-before {
  & > *:not(:first-child)::before {
    content: "\00b7";
    margin: 0 0.5em;
  }
}

.dot-after {
  &::after {
    content: "\00b7";
    margin: 0 0.5em;
  }
}

.additional-comments {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: $color-bg-2;
  color: $color-text-1;
  font-weight: $global-weight-bold;
  font-size: $small-font-size;
}

.post-tags {
  display: flex;
  flex-wrap: wrap;
  font-size: $small-font-size;
  margin: -0.25rem;

  a {
    padding: 0.25rem;
    width: initial;
  }
}

.comment-reply-content {
  width: 100%;
  align-items: flex-end;
  flex-wrap: nowrap;
  justify-content: flex-end;

  textarea {
    &.comment-reply-text {
      min-height: initial;
      height: initial;

      &,
      &:focus,
      &:active {
        border: none;
      }
    }
  }

  .comment-reply-submit {
    position: absolute;
  }
}

.report-card .report-header,
.page-section .page-header {
  //@include dynamic-box;
}

$gb-variants: (
  l: linear-gradient(to right, var(--f-color-border-0) 0%, var(--_c2) 100%),
  r: linear-gradient(to left, var(--f-color-border-0) 0%, var(--_c2) 100%),
  c: radial-gradient(circle at center, var(--f-color-border-0) 0%, var(--_c2) 100%),
  ci: radial-gradient(circle at center, var(--_c2) 0%, var(--f-color-border-0) 80%),
);

@each $key, $val in $gb-variants {
  .gb-#{$key} {
    --_c2: color-mix(in oklab, var(--f-color-border-0) 10%, transparent);
    background: $val no-repeat;
    background-size: 100% 1px;
  }
}
/* ... */

